# netease-cloud-music-api-rs

./: .gitignore  Cargo.toml  README.md
src/: crypto.rs  lib.rs  request.rs
src/login/: mod.rs
src/musician/: mod.rs
src/playlist/: mod.rs
src/user/: mod.rs
src/yunbei/: mod.rs
tests/: login_test.rs  musician.rs  playlist_test.rs  user_test.rs  yunbei_test.rs
