[package]
name = "ncm_api"
version = "0.1.1"
edition = "2021"
description = "网易云音乐API"
license = "MIT OR Apache-2.0"
authors = ["ClassmateLin <classmatelin.site@gmail.com>"]

[dependencies]
reqwest = {version="^0.11.0"}
tokio = { version = "^1", features = ["full"] }
rsa = {version="^0.6.1"}
rand = {version = "^0.8.5"}
lazy_static = {version="^1.4.0"}
openssl = {version="^0.10.40"}
hex = {version="^0.4.3"}
urlqstring = {version="^0.3.5"}
base64 = {version="0.13.0"}
serde = {version="^1.0.137", features=["derive"]}
serde_json = {version="^1.0.81"}
regex = {version="^1.5.6"}
cacache = {version="^10.0.1"}